Yapay zeka altyapısı Hugging Face'den ücretsiz Pollinations.ai servisine taşındı. API Key bağımlılığı kaldırıldı ve kod temizliği yapıldı.

--- a/AiResimUretme/appsettings.json
+++ b/AiResimUretme/appsettings.json
@@ -8,9 +8,5 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*",
-  "AiSettings": {
-    "ApiUrl": "https://router.huggingface.co/hf-inference/models/stabilityai/stable-diffusion-xl-base-1.0",
-    "ApiKey": "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"
-  }
+  "AllowedHosts": "*"
 }
